--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
         <link data-trunk rel="sass" href="styles.scss">
         <link data-trunk rel="copy-dir" href="img">
         <link rel="shortcut icon" href="img/favicon.ico" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
     </head>
 </html>
